crates/justrdp-derive/tests/ui/empty_attr.stderr
error: #[pdu(...)] must not be empty; expected one of: u8, u16_le, u16_be, u32_le, u32_be, u64_le, i16_le, i32_le, bytes = N, rest, pad = N
 --> tests/ui/empty_attr.rs:5:5
  |
5 |     #[pdu()]
  |     ^^^^^^^^
